[gd_scene load_steps=13 format=3 uid="uid://de3ufogxp37s8"]

[ext_resource type="PackedScene" uid="uid://ckgf4x4ssqojg" path="res://scenes/player.tscn" id="1_37kl0"]
[ext_resource type="Script" uid="uid://uokxyeqy4rue" path="res://scripts/room_system/level.gd" id="1_iyx0m"]
[ext_resource type="PackedScene" uid="uid://bvk8x7p2qm1n8" path="res://scenes/GameHUD.tscn" id="2_bl13t"]
[ext_resource type="Script" uid="uid://djuarkdn61ex2" path="res://scripts/managers/RoomManager.gd" id="4_d8r7f"]
[ext_resource type="Script" uid="uid://cog8ddhnycnp" path="res://scripts/managers/GameManager.gd" id="5_j5jx5"]
[ext_resource type="PackedScene" uid="uid://7nx4vlo06uwf" path="res://scenes/UI/EndScreen/end_screen.tscn" id="5_jcd4p"]
[ext_resource type="PackedScene" uid="uid://cf6t2nxd3fq6q" path="res://scenes/UI/UpgradeMenu/upgrade_menu.tscn" id="7_jcd4p"]
[ext_resource type="Script" uid="uid://bapesw42nw1ql" path="res://scenes/ui_manager.gd" id="9_uacia"]
[ext_resource type="PackedScene" uid="uid://dc388hkklqvvc" path="res://addons/simple_menu/scenes/main_menu.tscn" id="9_yk7ts"]
[ext_resource type="Script" uid="uid://dujt5tny6b6xh" path="res://scripts/Interactable.gd" id="10_interactable"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(80, 80)

[node name="GameManager" type="Node2D" node_paths=PackedStringArray("HudReference", "UiManager")]
script = ExtResource("1_0tnpc")
HudReference = NodePath("CanvasLayer/GameHUD")
UiManager = NodePath("UIManager")

[node name="Player" parent="." instance=ExtResource("2_vtaks")]

[node name="RoomManager" type="Node" parent="."]
script = ExtResource("3_kvpfn")

[node name="RoomContainer" type="Node" parent="RoomManager"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameHUD" parent="CanvasLayer" instance=ExtResource("4_dinhu")]

[node name="EndScreen" parent="CanvasLayer" instance=ExtResource("5_kvuet")]
process_mode = 3
visible = false

[node name="UpgradeMenu" parent="CanvasLayer" instance=ExtResource("6_trtic")]
process_mode = 3
visible = false

[node name="UIManager" type="Node" parent="." node_paths=PackedStringArray("hud", "endScreen", "upgradeMenu")]
script = ExtResource("7_ir15t")
hud = NodePath("../CanvasLayer/GameHUD")
endScreen = NodePath("../CanvasLayer/EndScreen")
upgradeMenu = NodePath("../CanvasLayer/UpgradeMenu")
mainMenuScene = ExtResource("8_ca42v")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.7, 0.7, 0.8, 1)

[node name="ColorOverlay" type="CanvasLayer" parent="."]
layer = -1

[node name="GreyOverlay" type="ColorRect" parent="ColorOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.4, 0.5, 0.3)

[node name="TestSearchableObject" type="StaticBody2D" parent="."]
position = Vector2(150, 0)

[node name="ColorRect" type="ColorRect" parent="TestSearchableObject"]
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
color = Color(0.6, 0.4, 0.2, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestSearchableObject"]
shape = SubResource("RectangleShape2D_1")

[node name="Interactable" type="Area2D" parent="TestSearchableObject"]
script = ExtResource("10_interactable")
interaction_prompt = "Search Chest"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestSearchableObject/Interactable"]
shape = SubResource("RectangleShape2D_2")
